# helios-vision

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/examples/: main.cpp
core/include/helios/: engine.h
core/src/: engine.cpp
docs/: ARCHITECTURE.md  EXECUTION_PLAN.md  PROJECT_CONTEXT.md  ROADMAP.md  VISION.md
docs/decisions/: ADR-0001-project-direction.md
journal/: 2026-06-28-sprint-000-001-foundation.md  2026-06-30-sprint-002-pogress-log.md
tests/: CMakeLists.txt  engine_test.cpp
